# eda_precificacao

./: AnaliseDados.ipynb  eda.ipynb  main.py  pyproject.toml  sample.csv
