[project]
name = "eda-precificacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
